<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20sp"
    android:layout_marginStart="20dp"
    android:layout_marginLeft="20dp"
    android:layout_marginTop="20dp"
    android:layout_marginEnd="20dp"
    android:layout_marginRight="20dp"
    android:layout_marginBottom="20dp"
    android:background="#252121"
    android:fadingEdge="horizontal|vertical"
    android:foreground="@color/common_google_signin_btn_text_dark_disabled"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:soundEffectsEnabled="true">


    <Button
        android:id="@+id/btnTakePicture"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button2"
        android:enabled="false"
        android:text="Take barcode picture"
        android:visibility="invisible" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnScanBarcode"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="32dp"
            android:height="100dp"
            android:background="@color/colorPrimary"
            android:fadingEdge="horizontal|vertical"
            android:fadingEdgeLength="20dp"
            android:fontFamily="serif-monospace"
            android:minHeight="48dp"
            android:shadowColor="#082C36"
            android:singleLine="true"
            android:text="Scan  Barcode"
            android:textColor="#37474F"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.505"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="TouchTargetSizeCheck"
            tools:layout_conversion_absoluteHeight="48dp"
            tools:layout_conversion_absoluteWidth="171dp" />

        <Switch
            android:id="@+id/swPassFail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginBottom="52dp"
            android:backgroundTint="@android:color/holo_green_light"
            android:fontFamily="serif-monospace"
            android:maxHeight="60dp"
            android:minHeight="48dp"
            android:text="@string/pass_fail"
            android:textColor="#FFFFFF"
            android:textColorHighlight="#9575CD"
            android:textColorLink="#4DD0E1"
            android:textOff="@string/fail"
            android:textOn="@string/pass"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/btnScanBarcode"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.929"
            tools:layout_conversion_absoluteHeight="48dp"
            tools:layout_conversion_absoluteWidth="154dp" />

        <EditText
            android:id="@+id/editTextSource"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:backgroundTint="@android:color/holo_green_light"
            android:capitalize="characters"
            android:cursorVisible="true"
            android:ems="10"
            android:fontFamily="serif-monospace"
            android:hint="@string/source"
            android:inputType="textPersonName"
            android:maxHeight="60dp"
            android:minHeight="48dp"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textColorHighlight="#7986CB"
            android:textColorHint="@android:color/darker_gray"
            android:textColorLink="#4DD0E1"
            android:textCursorDrawable="@null"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/editTextPOWO"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.525"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            tools:layout_conversion_absoluteHeight="68dp"
            tools:layout_conversion_absoluteWidth="301dp" />

        <EditText
            android:id="@+id/editTextCustomer"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginTop="132dp"
            android:backgroundTint="@android:color/holo_green_light"
            android:capitalize="characters"
            android:cursorVisible="true"
            android:ems="10"
            android:fontFamily="serif-monospace"
            android:hint="@string/customer"
            android:inputType="textPersonName"
            android:maxHeight="60dp"
            android:minHeight="48dp"
            android:textColor="#FFFFFF"
            android:textColorHighlight="#7986CB"
            android:textColorHint="@android:color/darker_gray"
            android:textColorLink="#4DD0E1"
            android:textCursorDrawable="@null"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.512"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_conversion_absoluteHeight="48dp"
            tools:layout_conversion_absoluteWidth="303dp" />

        <EditText
            android:id="@+id/editTextSO"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginTop="180dp"
            android:backgroundTint="@android:color/holo_green_light"
            android:capitalize="characters"
            android:cursorVisible="true"
            android:ems="10"
            android:fontFamily="serif-monospace"
            android:hint="@string/SO"
            android:inputType="textPersonName"
            android:maxHeight="60dp"
            android:minHeight="48dp"
            android:textAllCaps="true"
            android:textColor="#FFFFFF"
            android:textColorHighlight="#9575CD"
            android:textColorHint="@android:color/darker_gray"
            android:textColorLink="#4DD0E1"
            android:textCursorDrawable="@null"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.476"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_conversion_absoluteHeight="120dp"
            tools:layout_conversion_absoluteWidth="448dp" />

        <EditText
            android:id="@+id/editTextPOWO"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginTop="84dp"
            android:backgroundTint="@android:color/holo_green_light"
            android:capitalize="characters"
            android:cursorVisible="true"
            android:ems="10"
            android:fontFamily="serif-monospace"
            android:hint="@string/POWO"
            android:inputType="textPersonName"
            android:maxHeight="60dp"
            android:minHeight="48dp"
            android:textAllCaps="true"
            android:textColor="#FFFFFF"
            android:textColorHighlight="#9575CD"
            android:textColorHint="@android:color/darker_gray"
            android:textColorLink="#4DD0E1"
            android:textCursorDrawable="@null"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.512"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_conversion_absoluteHeight="147dp"
            tools:layout_conversion_absoluteWidth="437dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</RelativeLayout>
